--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 header {
     color: rgb(194, 217, 202);
     text-align: center;
-    box-shadow: 10px 10px 20px blue;
+    box-shadow: 10px 10px 20px rgb(0, 0, 255);
 }
 
 section {
@@ -25,6 +25,7 @@ footer {
     color: antiquewhite;
     text-align: center;
     font-style: italic;
+    box-shadow: 2px 2px 10px rgb(35, 14, 199);
 }
 
 img {
